[gd_scene load_steps=7 format=3 uid="uid://smjjt1loro0"]

[ext_resource type="Script" uid="uid://datmtggct7nhv" path="res://SCRIPTS/Table.gd" id="1_p07j1"]
[ext_resource type="PackedScene" uid="uid://wd23pngx08lf" path="res://scenes/Interactable.tscn" id="2_jqr7b"]
[ext_resource type="Texture2D" uid="uid://dc6nddm23asqu" path="res://ASSETS/TEXTURES/FURNITURE/FURNITURE.png" id="3_xn8rw"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p07j1"]
radius = 18.0
height = 168.0

[sub_resource type="CircleShape2D" id="CircleShape2D_561jp"]
radius = 109.041

[sub_resource type="SystemFont" id="SystemFont_t5vmc"]
font_names = PackedStringArray("BoldPixels")
oversampling = 8.0

[node name="TABLE" type="Node2D"]
script = ExtResource("1_p07j1")
metadata/tooltip = "Table"
metadata/description = "Customers will order and pay here"

[node name="INTERACTABLE" parent="." instance=ExtResource("2_jqr7b")]
text = "SERVE FOOD"
border_color = Color(0, 0.645547, 0.236471, 1)
can_interact = false

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-50, 0)
scale = Vector2(2, 2)
texture = ExtResource("3_xn8rw")
region_enabled = true
region_rect = Rect2(350, 50, 50, 50)

[node name="Sprite2D2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(50, 0)
scale = Vector2(2, 2)
texture = ExtResource("3_xn8rw")
region_enabled = true
region_rect = Rect2(400, 50, 50, 50)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 6
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -11)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_p07j1")

[node name="PLAYERCHECK" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PLAYERCHECK"]
shape = SubResource("CircleShape2D_561jp")

[node name="CAPACITY" type="RichTextLabel" parent="."]
texture_filter = 1
offset_left = -14.999999
offset_top = 43.0
offset_right = 43.63
offset_bottom = 83.0
scale = Vector2(0.525, 0.525)
theme_override_fonts/normal_font = SubResource("SystemFont_t5vmc")
theme_override_font_sizes/normal_font_size = 21
text = "0/0"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="interacted" from="INTERACTABLE" to="." method="_on_interactable_interacted"]
[connection signal="body_entered" from="PLAYERCHECK" to="." method="_on_playercheck_body_entered"]
[connection signal="body_exited" from="PLAYERCHECK" to="." method="_on_playercheck_body_exited"]
